ui-vaadin/src/main/resources/META-INF/resources/frontend/styles/components/dynamic-filter-view.css
.filterselector-layout {
	background-color: var(--lumo-base-color);
	height: 100%;
}

.filtermeta-layout {
	width: 100%;
    justify-content: space-between;
}

.filtermeta-layout vaadin-label {
    margin-top: 10px;
    margin-right: 10px;
}

.filtermeta-layout button {
	background: 0;
}

.dynamic-filtergroup-root {
	display: flex;
	width: 100%;
	flex-direction: column;
}

.dynamic-filtergroup {
	display: flex;
	flex-wrap: wrap;
    justify-content: flex-start;
	width: 100%;
	background-color: var(--lumo-base-color);
    border-radius: var(--lumo-border-radius-s);
    box-shadow: var(--lumo-box-shadow-xs);
    padding-top: var(--lumo-space-s);
    padding-bottom: var(--lumo-space-s);
    margin-bottom: var(--lumo-space-s);
}

.dynamic-filter {
	flex-direction: row;
	border-radius: var(--lumo-border-radius-s);
	background-color: var(--lumo-base-color);
	margin: 0.25em;
	box-shadow: 1px 1px 7px var(--lumo-contrast-20pct);
	margin-left: 0.5em;
	margin-right: 5px;
}

.dynamic-filter vaadin-text-field {
	width: 100%;
}

.dynamic-filter-onefield {
	width: 12em;
	margin-right: 4px;
}

.close-button {
	min-width: 0px;
	border-radius: 30px;
	height: 30px;
	margin-right: 3px;
	background: 0;
	margin-bottom: -8px;
}

.filter-row {
	margin-left: 5px;
}

.filterselector-layout vaadin-details::part(content) {
	margin-left: 35px;
}

.filterselector-layout vaadin-details {
	width: 100%;
}

.filterselector-layout vaadin-details::part(summary-content) {
	width: 100%;
}

.filter-header {
	width: 100%;
	justify-content: space-between;
    align-items: center;
}

.filter-name {
	margin-left: 8px;
    margin-top: 12px;
}

.operation-name {	
	margin-left: 8px;
    margin-top: 16px;
    color: var(--lumo-contrast-50pct);
    font: menu;
}

.filter-layout {
	flex-direction: column;
}

.icon-layout {
	align-items: center;
	width: 210px;
}

.filter-icon {
	margin-left: 10px;
}

.filter-label {
	margin-left: 10px;
}

